--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "truffle-test-utils": "0.1.0",
     "web3": "1.0.0-beta.34"
+  },
+  "devDependencies": {
+    "chai-as-promised": "7.1.1"
   }
 }
